--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "nhtsa API Demo",
-  "version": "0.3.0",
-  "description": "nhtsa api demo project based on expressjs - es6 boilerplate at https://github.com/developit/express-es6-rest-api.git",
+  "name": "nhtsa-api-demo",
+  "version": "0.0.1",
+  "description": "nhtsa api demo project  - based on es6 boilerplate at developit/express-es6-rest-api.git",
   "main": "dist",
   "scripts": {
     "dev": "nodemon -w src --exec \"babel-node src --presets es2015,stage-0\"",
@@ -25,7 +25,10 @@
     }
   },
   "author": "Ajmal Sali <mail@ajm.al>",
-  "contributors": ["Jason Miller <jason@developit.ca>", "Ajmal Sali <mail@ajm.al>"],
+  "contributors": [
+    "Jason Miller <jason@developit.ca>",
+    "Ajmal Sali <mail@ajm.al>"
+  ],
   "dependencies": {
     "body-parser": "^1.13.3",
     "compression": "^1.5.2",
@@ -39,6 +42,7 @@
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-stage-0": "^6.5.0",
     "eslint": "^3.1.1",
-    "nodemon": "^1.9.2"
+    "nodemon": "^1.9.2",
+    "yarn": "^0.21.3"
   }
 }
