add nhtsa service

--- a/src/config.json
+++ b/src/config.json
@@ -1,5 +1,8 @@
 {
 	"port": 8888,
 	"bodyLimit": "100kb",
-	"corsHeaders": ["Link"]
+	"corsHeaders": ["Link"],
+	"nhtsa":{
+		"apiUrl": "https://one.nhtsa.gov/webapi/api/SafetyRatings"
+	}
 }
