--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "compression": "^1.5.2",
     "cors": "^2.7.1",
     "express": "^4.13.3",
-    "morgan": "^1.8.0"
+    "morgan": "^1.8.0",
+    "requestretry": "^1.12.0"
   },
   "devDependencies": {
     "babel-cli": "^6.9.0",
