--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "Ajmal Sali <mail@ajm.al>"
   ],
   "dependencies": {
+    "bluebird": "^3.5.0",
     "body-parser": "^1.13.3",
     "compression": "^1.5.2",
     "cors": "^2.7.1",
