--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "cors": "^2.7.1",
     "express": "^4.13.3",
     "morgan": "^1.8.0",
-    "requestretry": "^1.12.0"
+    "requestretry": "^1.12.0",
+    "tracer": "^0.8.7"
   },
   "devDependencies": {
     "babel-cli": "^6.9.0",
@@ -44,6 +45,8 @@
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-stage-0": "^6.5.0",
     "eslint": "^3.1.1",
+    "eslint-config-airbnb-base": "^11.1.1",
+    "eslint-plugin-import": "^2.2.0",
     "nodemon": "^1.9.2",
     "yarn": "^0.21.3"
   }
